--- a/plugins/whois/Dockerfile
+++ b/plugins/whois/Dockerfile
@@ -1,5 +1,6 @@
-FROM rapid7/insightconnect-python-3-38-plugin:4
-LABEL organization=komand
+FROM rapid7/insightconnect-python-3-38-plugin:5
+
+LABEL organization=rapid7
 LABEL sdk=python
 LABEL type=plugin
 
