[PLGN-432] Dig Version Bump To 2.0.1 (#2027)
* Added empty init file,version bumped and minor changes in plugin.spec.yaml

* Reverting Dockerfile SDK version

* Updated SDK

* Dockerfile changes and unit tests added

* Removed apk installs

* unit test

* forward action unit tests

* reverse action unit tests

* add parameterized package to requirements

--- a/plugins/dig/Dockerfile
+++ b/plugins/dig/Dockerfile
@@ -1,5 +1,6 @@
-FROM rapid7/insightconnect-python-3-38-slim-plugin:4
-LABEL organization=komand
+FROM rapid7/insightconnect-python-3-38-slim-plugin:5
+
+LABEL organization=rapid7
 LABEL sdk=python
 LABEL type=plugin
 
@@ -19,6 +20,7 @@ WORKDIR /python/src
 RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 RUN python setup.py build && python setup.py install
 
+# User to run plugin code. The two supported users are: root, nobody
 USER nobody
 
 ENTRYPOINT ["/usr/local/bin/komand_dig"]
