--- a/plugins/automox/plugin.spec.yaml
+++ b/plugins/automox/plugin.spec.yaml
@@ -342,7 +342,7 @@ types:
       type: "device_status_details"
       required: false
     last_logged_in_user:
-      title: Last Logged In User
+      title: Last Logged in User
       description: The last logged in user of a device
       type: string
       required: false
@@ -1011,6 +1011,7 @@ actions:
         description: Was operation successful
         type: boolean
         required: true
+        example: true
   delete_device:
     title: Delete Device
     description: Delete an Automox device
@@ -1033,6 +1034,7 @@ actions:
         description: Was operation successful
         type: boolean
         required: true
+        example: true
   get_device_software:
     title: Get Device Software
     description: Retrieve a list of software installed on a device
@@ -1102,6 +1104,7 @@ actions:
         description: Was operation successful
         type: boolean
         required: true
+        example: true
   list_groups:
     title: List Groups
     description: List Automox groups
@@ -1171,6 +1174,7 @@ actions:
         description: Was operation successful
         type: boolean
         required: true
+        example: true
       group:
         title: Group
         description: Detailed information about the created group
@@ -1235,6 +1239,7 @@ actions:
         description: Was operation successful
         type: boolean
         required: true
+        example: true
   delete_group:
     title: Delete Group
     description: Delete an Automox group
@@ -1257,6 +1262,7 @@ actions:
         description: Was operation successful
         type: boolean
         required: true
+        example: true
   upload_vulnerability_sync_file:
     title: Upload Vulnerability Sync File
     description: Upload a CSV file to vulnerability sync for processing
@@ -1324,7 +1330,7 @@ actions:
         example: 1234
     output:
       action_set:
-        title: Vulnerability Sync action set
+        title: Vulnerability Sync Action Set
         description: Details of a specified vulnerability sync action_set
         type: action_set
         required: true
@@ -1402,7 +1408,7 @@ actions:
         required: false
         example: "00000000-0000-0000-0000-000000000000"
       configuration_id_is_set:
-        title: Configuration ID Is Set
+        title: Configuration ID is Set
         description: Filter based on whether the configuration ID is set
         type: boolean
         required: false
@@ -1422,7 +1428,7 @@ actions:
         example:
           - created_at: 2023-10-10T03:45:26+0000
             created_by_user:
-              email: user.name@example.com
+              email: user@example.com
               firstname: User
               id: 1
               lastname: Name
@@ -1443,7 +1449,7 @@ actions:
             status: ready
             updated_at: 2023-10-10T03:45:30+0000
             updated_by_user:
-              email: user.name@example.com
+              email: user@example.com
               firstname: User
               id: 1
               lastname: Name
@@ -1564,6 +1570,7 @@ actions:
         description: Was operation successful
         type: boolean
         required: true
+        example: true
   delete_vulnerability_sync_action_set:
     title: Delete Vulnerability Sync Action Set
     description: Delete a vulnerability sync action set and all associated data
@@ -1586,6 +1593,7 @@ actions:
         description: Was operation successful
         type: boolean
         required: true
+        example: true
 
 triggers:
   get_events:
