--- a/plugins/whois/requirements.txt
+++ b/plugins/whois/requirements.txt
@@ -3,3 +3,4 @@
 # See: https://pip.pypa.io/en/stable/user_guide/#requirements-files
 parameterized==0.8.1
 setuptools~=65.5.1
+git+https://github.com/komand/python-whois.git@0.7.0
