--- a/plugins/duo_admin/plugin.spec.yaml
+++ b/plugins/duo_admin/plugin.spec.yaml
@@ -13,7 +13,7 @@ sdk:
   version: 5
   user: nobody
 description: Duo is a trusted access solution for organizations. The Duo Admin plugin for Rapid7 InsightConnect allows users to manage and administrate their Duo organization
-version: 4.2.2
+version: 4.3.0
 connection_version: 4
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/duo_admin
@@ -1267,6 +1267,21 @@ tasks:
   monitor_logs:
     title: Monitor Logs
     description: Monitor administrator, authentication and trust monitor event logs
+    input:
+      collectTrustMonitorEvents:
+        title: Collect Duo Trust Monitor Events
+        description: Whether to collect Trust Monitor events (note requires appropriate level of Duo Admin license)
+        type: boolean
+        required: false
+        default: true
+        example: false
+      collectAdminLogs:
+        title: Collect Duo Admin Logs
+        description: Whether to collect Admin logs (note requires appropriate level of Duo Admin license)
+        type: boolean
+        required: false
+        default: true
+        example: false
     output:
       logs:
         title: Logs
