--- a/.github/workflows/plugin_staging_build.yml
+++ b/.github/workflows/plugin_staging_build.yml
@@ -84,18 +84,15 @@ jobs:
         if: success()
         run: |
           cd plugins
-          ../.ci_venv/bin/icon-ci build -d {{ env.BUILD_OUTPUT_DIRECTORY }}
+          ../.ci_venv/bin/icon-ci build -d ${{ env.BUILD_OUTPUT_DIRECTORY }}
 
-      - name: Find the filename
-        id: find-filename
+      - name: Find Release Asset
+        id: findReleaseAsset
         run: |
-          # Navigate to the desired directory
+          # Navigate to the build directory
           cd ${{ env.BUILD_OUTPUT_FULL_PATH }}
-
           # Use find to get the filename
           filename=$(find . -type f -maxdepth 1 | xargs basename)
-          
-          # Set the output variable for later use
           echo "RELEASE_ASSET=${filename}" >> $GITHUB_ENV
           echo "GIT_TAG=${filename%.tar.gz}" >> $GITHUB_ENV
 
