--- a/plugins/grr/plugin.spec.yaml
+++ b/plugins/grr/plugin.spec.yaml
@@ -4,10 +4,10 @@ products: [insightconnect]
 name: grr
 title: Google Rapid Response
 description: Organize and start threat hunts using GRR
-version: 3.0.0
+version: 3.0.1
 vendor: rapid7
 support: community
-status: []
+status: [obsolete]
 resources:
   source_url: https://github.com/rapid7/insightconnect-plugins/tree/master/plugins/grr
   license_url: https://github.com/rapid7/insightconnect-plugins/blob/master/LICENSE
