Moved plugin status to obsolete

--- a/plugins/matplotlib/Dockerfile
+++ b/plugins/matplotlib/Dockerfile
@@ -1,18 +1,17 @@
-FROM rapid7/insightconnect-python-3-38-plugin:5
+FROM rapid7/insightconnect-python-3-38-plugin:4
 
 LABEL organization=rapid7
+LABEL sdk=python
 
-RUN apt-get update && apt-get install -y build-essential gcc
-
-# Add source code
 WORKDIR /python/src
 ADD ./plugin.spec.yaml /plugin.spec.yaml
 ADD . /python/src
 
-# Install pip dependencies
 RUN if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-# Install plugin
-RUN python setup.py build && python setup.py install
+RUN	python setup.py build && python setup.py install
 
-ENTRYPOINT ["/usr/local/bin/komand_matplotlib"]
+# User to run plugin code. The two supported users are: root, nobody
+USER nobody
+
+ENTRYPOINT ["/usr/local/bin/icon_matplotlib"]
